fix: small ui updates
deleted the close button from ui feedback and fixed the spinner not centered properly

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
 html, body{
   width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -61,7 +61,10 @@ footer{
   display: block;
   width: 80px;
   height: 80px;
-  padding-left: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .loader:after{
   content: ' ';
@@ -116,15 +119,11 @@ footer{
 @media only screen and (max-width: 48em){
   footer{
     position: relative;
-    bottom: 0;
-    width: 100%;
   }
 }
 
-@media only screen and (max-width: 64em){
+@media only screen and (min-width: 48em) and (max-width: 64em){
   footer{
-    position: relative;
-    bottom: 0;
-    width: 100%;
+    position: fixed;
   }
 }
